# bdd100k-detection-pipeline

./: Dockerfile  EVALUATION.md  MODEL_SELECTION.md  README.md  entrypoint.sh  pyproject.toml  requirements.txt  train.py
scripts/: setup_rtdetrv2.sh
src/: __init__.py
src/data/: __init__.py  analysis.py  anomalies.py  dashboard.py  parser.py  pipeline.py  visualization.py
src/evaluation/: __init__.py  compare_models.py  evaluate.py  visualize_samples.py
src/model/: __init__.py  class_map.py  data_loader.py  detector.py  yolo_detector.py
src/scripts/: rtdetrv2_infer.py
